--- a/master.css
+++ b/master.css
@@ -60,18 +60,18 @@
    header {
      position: sticky;
      z-index: 999;
-     box-shadow: 0px 0px 0px 0px;
+     box-shadow: 0px 0px 40px 0px;
      /* backdrop-filter: blur(8px); */
      top: 0;
      left: 0;
      width: 100%;
      padding: 20px 90px;
      /* background: black; */
-     /* background-color: rgba(0, 0, 0, 0.5); */
+     background-color: rgba(0, 0, 0, 0.5);
      display: flex;
      justify-content: space-between;
      align-items: center;
-     backdrop-filter: blur(8px);
+/*      backdrop-filter: blur(8px); */
  }
 
  .logo {
